Update timeshift module to timeshift_alignment
Issue #4

All related modules modified

--- a/processing/qaqc_template.cfg
+++ b/processing/qaqc_template.cfg
@@ -124,7 +124,7 @@ inner_band_warning_threshold = .3
 inner_band_error_threshold = .15
 cross_cor_threshold = .4
 
-[TIMESHIFT]
+[TIMESTAMP_ALIGNMENT]
 ppfd_unit_convert = .5
 cross_cor_threshold = .4
 occasion_per_window_threshold = 1
