update thresholds module to physical_range

--- a/processing/qaqc_template.cfg
+++ b/processing/qaqc_template.cfg
@@ -75,7 +75,7 @@ suggested_variables = ('WD', 'PPDF_DIF', 'PPFD_OUT', 'SW_DIF', 'SW_OUT', 'LW_OUT
 [MANDATORY_VARIABLES]
 mandatory_variables = ('FC', 'FC4', 'H', 'LE')
 
-[PHYSICAL_LIMITS]
+[PHYSICAL_RANGE]
 soft_flag_threshold = 0.01
 hard_flag_threshold = 0.001
 
