update multivariate_intercomparison to multivariate_comparison

--- a/processing/qaqc_template.cfg
+++ b/processing/qaqc_template.cfg
@@ -79,7 +79,7 @@ mandatory_variables = ('FC', 'FC4', 'H', 'LE')
 soft_flag_threshold = 0.01
 hard_flag_threshold = 0.001
 
-[MULTIVARIATE_INTERCOMPARISON]
+[MULTIVARIATE_COMPARISON]
 ppfd_in_sw_in_threshold = 4.5
 ppfd_in_sw_in_lo_threshold = 0.7
 ppfd_in_sw_in_up_threshold = 1.0
