--- a/processing/test/testdata/multivariate_comparison/test_qaqc.cfg
+++ b/processing/test/testdata/multivariate_comparison/test_qaqc.cfg
@@ -4,7 +4,7 @@ data_dir =
 combined_file_dir =
 intermediate_dirname = intermediate
 
-[MULTIVARIATE_INTERCOMPARISON]
+[MULTIVARIATE_COMPARISON]
 ppfd_in_sw_in_threshold = 4.5
 ppfd_in_sw_in_lo_threshold = 0.7
 ppfd_in_sw_in_up_threshold = 1.0
