update ustar_filter to ustar_filtering

--- a/processing/qaqc_template.cfg
+++ b/processing/qaqc_template.cfg
@@ -108,7 +108,7 @@ outlier_warning = 0.01
 
 years_required_for_deviation_check = 3
 
-[USTAR_CONFIG]
+[USTAR_FILTERING]
 lower_bound_warn = .02
 lower_bound_error = .10
 difference_warn = .02
