--- a/processing/test/testdata/ustar_filtering/test_qaqc.cfg
+++ b/processing/test/testdata/ustar_filtering/test_qaqc.cfg
@@ -6,7 +6,7 @@
 # combined_file_dir =
 # intermediate_dirname =
 
-# [USTAR_CONFIG]
+# [USTAR_FILTERING]
 # lower_bound_warn =
 # lower_bound_error =
 # difference_warn =
