update diurnal_seasonal to diurnal_seasonal_pattern

--- a/processing/qaqc_template.cfg
+++ b/processing/qaqc_template.cfg
@@ -116,7 +116,7 @@ difference_error = .10
 sw_day_night_cutoff = 5
 ppfd_day_night_cutoff = 10
 
-[DIURNAL_SEASONAL]
+[DIURNAL_SEASONAL_PATTERN]
 historical_ranges = ../diurnal_seasonal_range
 outer_band_warning_threshold = .15
 outer_band_error_threshold = .3
