--- a/processing/test/testdata/diurnal_seasonal_pattern/test_qaqc.cfg
+++ b/processing/test/testdata/diurnal_seasonal_pattern/test_qaqc.cfg
@@ -1,4 +1,4 @@
-[DIURNAL_SEASONAL]
+[DIURNAL_SEASONAL_PATTERN]
 historical_ranges = ../diurnal_seasonal_range
 outer_band_warning_threshold = .15
 outer_band_error_threshold = .3
