Make embargo years part of config

--- a/processing/qaqc_template.cfg
+++ b/processing/qaqc_template.cfg
@@ -52,6 +52,7 @@ badm_exe_dir = path/generator
 db_flux_processing_key =
 db_flux_processing_user =
 db_flux_processing_host =
+embargo_years = 2
 PI_vars = ['VPD', 'NEE', 'RECO', 'GPP']
 
 [CRON]
