Update code for new site_info service
Closes #74

--- a/processing/qaqc_template.cfg
+++ b/processing/qaqc_template.cfg
@@ -1,5 +1,5 @@
 [VERSION]
-code_version = 1.2.5
+code_version = 1.2.6
 code_major_version = 5
 test = True
 
@@ -7,7 +7,7 @@ test = True
 fp_vars = https://amfcdn.lbl.gov/api/v1/fp_var
 fp_limits = https://amfcdn.lbl.gov/api/v1/fp_var?limits=True
 site_attrs = https://amfcdn.lbl.gov/api/v1/site_display/AmeriFlux
-site_info =
+site_info = https://amfcdn.lbl.gov/api/v1/BADM/data/{site_id}/Site_General_Info
 report_status =
 upload_info =
 upload_part1 =
