--- a/processing/qaqc_template.cfg
+++ b/processing/qaqc_template.cfg
@@ -209,6 +209,13 @@ tester_jira_user =
 tester_jira_user2 =
 test_site = test-Site
 
+
+[FORMAT_QAQC_DRIVER]
+data_dir = ./test/fortmat_qaqc_driver/data
+log_dir = format_qaqc_driver_log
+time_sleep = 5
+max_retries = 3
+
 [pytest]
 flake8-ignore =
     ./test/resources/* ALL
