Change out upload services; rework code for new DB stack
Note: Data QAQC, publish modules, misc helper modules have not been fully evaluated.
Only Format QAQC has been changed fully and evaluated.

--- a/processing/qaqc_template.cfg
+++ b/processing/qaqc_template.cfg
@@ -9,7 +9,6 @@ fp_limits = https://amfcdn.lbl.gov/api/v1/fp_var?limits=True
 site_attrs = https://amfcdn.lbl.gov/api/v1/site_display/AmeriFlux
 site_info = https://amfcdn.lbl.gov/api/v1/BADM/data/{site_id}/Site_General_Info
 report_status =
-upload_info =
 upload_part1 =
 upload_part2 =
 register_base_qaqc =
@@ -28,6 +27,8 @@ ui_prefix = https://ameriflux.lbl.gov/
 
 [AMP]
 file_upload_notification_email =
+qaqc_processor_user =
+qaqc_processor_email =
 
 [REPORT_EMAIL]
 report_link = https://url/qaqc-report/?site_id={s}&report_id={p}
