Add data upload source configuration

--- a/processing/qaqc_template.cfg
+++ b/processing/qaqc_template.cfg
@@ -27,6 +27,7 @@ ui_prefix = https://ameriflux.lbl.gov/
 
 [AMP]
 file_upload_notification_email =
+file_upload_source =
 qaqc_processor_user =
 qaqc_processor_email =
 
