update qaqc template

--- a/processing/qaqc_template.cfg
+++ b/processing/qaqc_template.cfg
@@ -215,6 +215,7 @@ data_dir = ./test/fortmat_qaqc_driver/data
 log_dir = format_qaqc_driver_log
 time_sleep = 5
 max_retries = 3
+max_timeout = 15
 
 [pytest]
 flake8-ignore =
