update unit for format qaqc driver config

--- a/processing/qaqc_template.cfg
+++ b/processing/qaqc_template.cfg
@@ -213,9 +213,9 @@ test_site = test-Site
 [FORMAT_QAQC_DRIVER]
 data_dir = ./test/fortmat_qaqc_driver/data
 log_dir = format_qaqc_driver_log
-time_sleep = 5
+time_sleep_s = 5
+max_timeout_s = 15
 max_retries = 3
-max_timeout = 15
 
 [pytest]
 flake8-ignore =
