add lookback_h to config file

--- a/processing/qaqc_template.cfg
+++ b/processing/qaqc_template.cfg
@@ -215,6 +215,7 @@ log_dir = format_qaqc_driver_log
 time_sleep_s = 5
 max_timeout_s = 15
 max_retries = 3
+lookback_h = 24
 
 [pytest]
 flake8-ignore =
