update mail send to amp

--- a/processing/qaqc_template.cfg
+++ b/processing/qaqc_template.cfg
@@ -30,6 +30,8 @@ file_upload_notification_email =
 file_upload_source =
 qaqc_processor_user =
 qaqc_processor_email =
+amp_team_email = 
+host = 
 
 [REPORT_EMAIL]
 report_link = https://url/qaqc-report/?site_id={s}&report_id={p}
@@ -38,7 +40,7 @@ self_review_instruction_link = instructions_link
 self_review_sites_file = ./self_review_sites.csv
 
 [PHASE_I]
-output_dir =
+output_dir = FormatQAQCDriver
 data_dir =
 
 [PHASE_II]
