incorporate new register qaqc service and register base candidate

--- a/processing/qaqc_template.cfg
+++ b/processing/qaqc_template.cfg
@@ -11,7 +11,8 @@ site_info = https://amfcdn.lbl.gov/api/v1/BADM/data/{site_id}/Site_General_Info
 report_status =
 upload_part1 =
 upload_part2 =
-register_base_qaqc =
+register_qaqc =
+register_base_candidate =
 get_base_input =
 publish_base =
 file_qaqc_url_prefix =
