add dummy host to config file

--- a/processing/qaqc_template.cfg
+++ b/processing/qaqc_template.cfg
@@ -32,7 +32,7 @@ file_upload_source =
 qaqc_processor_user =
 qaqc_processor_email =
 amp_team_email =
-host =
+host = host
 
 [REPORT_EMAIL]
 report_link = https://url/qaqc-report/?site_id={s}&report_id={p}
