add format qaqc driver

--- a/processing/qaqc_template.cfg
+++ b/processing/qaqc_template.cfg
@@ -31,6 +31,8 @@ file_upload_notification_email =
 file_upload_source =
 qaqc_processor_user =
 qaqc_processor_email =
+amp_team_email =
+host = host
 
 [REPORT_EMAIL]
 report_link = https://url/qaqc-report/?site_id={s}&report_id={p}
@@ -39,7 +41,8 @@ self_review_instruction_link = instructions_link
 self_review_sites_file = ./self_review_sites.csv
 
 [PHASE_I]
-output_dir =
+output_dir = FormatQAQCDriver
+data_dir =
 
 [PHASE_II]
 output_dir = output
@@ -211,6 +214,13 @@ waiting_query = project%%3D%%22Data%%20QAQC%%22%%20and%%20issuetype%%20%%3D%%20%
 tester_jira_user =
 tester_jira_user2 =
 test_site = test-Site
+
+[FORMAT_QAQC_DRIVER]
+log_dir = format_qaqc_driver_log
+time_sleep_s = 5
+max_timeout_s = 15
+max_retries = 3
+lookback_h = 24
 
 [pytest]
 flake8-ignore =
