update email to AMP

--- a/processing/qaqc_template.cfg
+++ b/processing/qaqc_template.cfg
@@ -31,7 +31,7 @@ file_upload_notification_email =
 file_upload_source =
 qaqc_processor_user =
 qaqc_processor_email =
-amp_team_email =
+amp_team_email = []
 host = host
 
 [REPORT_EMAIL]
