update modules for python 3.10 and Data QAQC figure updates
* update modules for python 3.10, including matplotlib 3.9.0
* deal with rounding errors in multivariate comparison tests
* Plot Updates

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 codecov
 dataclasses
 # To avoid https://github.com/tholo/pytest-flake8/issues/87
-flake8<5.0.0
+flake8
 future
-matplotlib
+matplotlib==3.9.0
 numpy
 pandas
 psycopg2-binary
@@ -13,3 +13,4 @@ pytest-flake8
 requests
 scipy
 xlrd
+
