Data QAQC Auto Run functionality
Issue #65

Assesses the state of a sites uploads and past processing runs
Initiates Data QAQC for sites that are ready

--- a/processing/qaqc_template.cfg
+++ b/processing/qaqc_template.cfg
@@ -1,5 +1,5 @@
 [VERSION]
-code_version = 2.2.1
+code_version = 2.3.0
 code_major_version = 5
 test = True
 
@@ -46,6 +46,9 @@ max_timeout_s = 15
 max_retries = 3
 lookback_h = 24
 
+[DATA_AUTO]
+data_auto_lookback_time_h = 24
+
 [PHASE_I]
 output_dir = FormatQAQCDriver
 data_dir =
@@ -55,6 +58,7 @@ output_dir = output
 data_dir =
 combined_file_dir =
 intermediate_dirname = intermediate
+auto_log_dir = logs
 
 [PHASE_III]
 output_dir = BASE-BADM
@@ -176,6 +180,7 @@ data_issue_query = jql=project%%3D{p}%%20and%%20issuetype%%3D10101%%20and%%20%%2
 format_issue_query = jql=project%%3D{p}%%20and%%20issuetype%%3D10100%%20and%%20%%22Process%%20ID(s)%%22~{i}&fields=key
 user_token =
 timeout_schedule = ./timeout_schedule.json
+jira_pause_seconds = 2
 
 [DB]
 hostname =
@@ -187,6 +192,7 @@ flux_hostname =
 flux_user =
 flux_auth =
 flux_db_name =
+jira_db_name =
 
 new_hostname =
 new_user =
@@ -211,6 +217,8 @@ waiting_query = project%%3D%%22Data%%20QAQC%%22%%20and%%20issuetype%%20%%3D%%20%
 tester_jira_user =
 tester_jira_user2 =
 test_site = test-Site
+test_jira_project = NONE
+test_flux_hostname =
 
 [pytest]
 flake8-ignore =
