data auto: improve logging and bug fix
Issue #65

Make the log messages go in the correct log files
Added more logging
Corrected logging error in data_qaqc_auto_run
Fixed bug: no subissues are ready for data qaqc

--- a/processing/qaqc_template.cfg
+++ b/processing/qaqc_template.cfg
@@ -1,5 +1,5 @@
 [VERSION]
-code_version = 2.3.1
+code_version = 2.3.2
 code_major_version = 5
 test = True
 
@@ -59,6 +59,7 @@ data_dir =
 combined_file_dir =
 intermediate_dirname = intermediate
 auto_log_dir = logs
+process_type = 'BASE Generation'
 
 [PHASE_III]
 output_dir = BASE-BADM
